environments/gloo-mesh-core/east-region-ambient/clusterservices-config/base/http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "istio-system/*"
    - "gloo-mesh/*"
    - "argocd/*"
    - "grafana/*"
    - "istio-system/*"
