environments/gloo-mesh-core/east-region-ambient/clusterservices-config/base/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "ambient.gmc.glooplatform.com"
  gateways:
  - istio-system/https-gateway
  http:
  - name: kiali-ui
    match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
